@@ -16,7 +16,7 @@
 ## You should have received a copy of the GNU General Public License
 ## along with GnuCOBOL.  If not, see <http://www.gnu.org/licenses/>.
 
-AT_COPYRIGHT([Test cases Copyright (C) 2018 Free Software Foundation, Inc.
+AT_COPYRIGHT([Test cases Copyright (C) 2019 Free Software Foundation, Inc.
 
 Written by Keisuke Nishida, Roger While, Simon Sobisch, Edward Hart,
 Ron Norman, Brian Tiffin, Dave Pitts])
